@@ -27,6 +27,9 @@
 * Namespace records can now be removed with archive.update_properties() by
   passing: `Struct({'mynamespace': None})`
 
+* Added new plugin attribute 'hash_type', to specify hash algorithm
+ (matching hashlib module). Deprecated 'use_hash' attribute.
+
 5.0 2020-07-30
 ~~~~~~~~~~~~~~
 
